--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,14 @@
 *.sln.docstates
 
 # Build results
-
 [Dd]ebug/
 [Rr]elease/
 x64/
 [Bb]in/
 [Oo]bj/
+
+# Visual Studio .vs folder
+.vs/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
@@ -65,6 +67,9 @@ _ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
 
+# Rider IDE
+.idea/
+
 # Click-Once directory
 publish/
 
@@ -74,9 +79,7 @@ publish/
 *.azurePubxml
 
 # NuGet Packages Directory
-## TODO: If you have NuGet Package Restore enabled, uncomment the next line
 packages/
-## TODO: If the tool you use requires repositories.config, also uncomment the next line
 !packages/repositories.config
 
 # Windows Azure Build Output
@@ -129,5 +132,3 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
-
-_NCrunch*
