--- a/MainProgram/PetStoreApp/PetStoreApp.csproj
+++ b/MainProgram/PetStoreApp/PetStoreApp.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Models\Models.csproj" />
+    <ProjectReference Include="..\Models\PetStore-Models.csproj" />
   </ItemGroup>
 
 </Project>
