--- a/MainProgram/BinarySearcherTests/BinarySearcherTests.csproj
+++ b/MainProgram/BinarySearcherTests/BinarySearcherTests.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BinarySearcher\BinarySearcher.csproj" />
+    <ProjectReference Include="..\CustomExtensions\CustomExtensions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
