--- a/MainProgram/HerokuAppTests/HerokuAppTests.csproj
+++ b/MainProgram/HerokuAppTests/HerokuAppTests.csproj
@@ -10,11 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
     <PackageReference Include="MSTest" Version="3.6.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\BinarySearcher\BinarySearcher.csproj" />
-    <ProjectReference Include="..\CustomExtensions\CustomExtensions.csproj" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
   </ItemGroup>
 
   <ItemGroup>
