--- a/MainProgram/HerokuAppScenarios/HerokuAppScenarios.csproj
+++ b/MainProgram/HerokuAppScenarios/HerokuAppScenarios.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="NUnit" Version="3.14.0" />
     <PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
+    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="138.0.7204.18300" />
   </ItemGroup>
 
   <ItemGroup>
