--- a/MainProgram/HerokuOperations/HerokuOperations.csproj
+++ b/MainProgram/HerokuOperations/HerokuOperations.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.Support" Version="4.34.0" />
+  </ItemGroup>
+
 </Project>
