--- a/MainProgram/HerokuAppWeb/HerokuAppWeb.csproj
+++ b/MainProgram/HerokuAppWeb/HerokuAppWeb.csproj
@@ -8,7 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
-    <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="138.0.7204.18300" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HerokuOperations\HerokuOperations.csproj" />
   </ItemGroup>
 
 </Project>
