Added Utility Project Wrapper classes for WebInteraction, Data Utils and Configuration Utils are part of this.

--- a/MainProgram/HerokuAppScenarios/HerokuAppScenarios.csproj
+++ b/MainProgram/HerokuAppScenarios/HerokuAppScenarios.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\HerokuAppMobile\HerokuAppMobile.csproj" />
     <ProjectReference Include="..\HerokuAppWeb\HerokuAppWeb.csproj" />
     <ProjectReference Include="..\HerokuOperations\HerokuOperations.csproj" />
   </ItemGroup>
