--- a/MainProgram/HerokuOperations/HerokuOperations.csproj
+++ b/MainProgram/HerokuOperations/HerokuOperations.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MSTest.TestFramework" Version="3.10.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
+  </ItemGroup>
+
 </Project>
