--- a/MainProgram/Utilities/Utilities.csproj
+++ b/MainProgram/Utilities/Utilities.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Selenium.Support" Version="4.34.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
+  </ItemGroup>
+
 </Project>
