--- a/MainProgram/HerokuOperations/HerokuOperations.csproj
+++ b/MainProgram/HerokuOperations/HerokuOperations.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="138.0.7204.18300" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Utilities\Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
