--- a/MainProgram/BinarySearcherTests/BinarySearcherTests.csproj
+++ b/MainProgram/BinarySearcherTests/BinarySearcherTests.csproj
@@ -15,6 +15,8 @@
     </PackageReference>
     <PackageReference Include="MSTest.TestAdapter" Version="3.9.3" />
     <PackageReference Include="MSTest.TestFramework" Version="3.9.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="106.15.0" />
     <PackageReference Include="Selenium.Support" Version="4.34.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.34.0" />
   </ItemGroup>
